--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 body {
   font-family: "Roboto", sans-serif;
-  color: #2e2f42; /*var(--navyblue, #2E2F42);*/
-  background-color: #ffffff;
+  color: #2e2f42; 
 }
 
 a {
@@ -21,31 +20,28 @@ ul {
     overflow: hidden;
 }
 
-/* Header */
 header {
   background-color: #ffffff;  
 }
 
-/* Logo */
 .header-logo {
   font-family: Raleway;
   font-size: 18px;
   font-style: normal;
   font-weight: 700;
-  line-height: 116.667%; /*21 px */
+  line-height: 116.667%; 
   letter-spacing: 0.54px;
   text-transform: uppercase;
   color: #2e2f42;
 }
 
 .header-logo-accent {
-  color: #4d5ae5; /*var(--iris, #4D5AE5); */
+  color: #4d5ae5; 
 }
 
-/* Menu */
+
 .menu {
   font-size: 16px;
-  /* font-style: normal; */
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.32px;
@@ -57,18 +53,16 @@ header {
   text-decoration-line: underline;
 }
 
-/* Contacts */
 .contacts {
   font-size: 16px;
-  font-style: normal;
-  /* font-weight: 400; */
-  line-height: 150%; /*24px;*/
+  font-style: normal; 
+  line-height: 150%; 
   letter-spacing: 0.32px;
 }
 
 .contact-email-link,
 .contact-phone-link {
-  color: #434455; /* var(--slate, #434455); */
+  color: #434455; 
 }
 
 .contact-email-link:hover,
@@ -76,21 +70,18 @@ header {
   color: #404bbf;
 }
 
-/* Main */
-
-/* Section 1 - About firm */
 .section-about {
   background-color: #2e2f42;
 }
 .section-about-header {
-  font-size: 56px;
-  /* font-style: normal; */
+  font-size: 56px; 
   font-weight: 700;
-  line-height: 107.143%; /* 60px */
+  line-height: 107.143%; 
   letter-spacing: 1.12px;
   color: #fff;
   text-align: center;
 }
+
 .button-order {
   cursor: pointer;
   border-radius: 4px;
@@ -107,107 +98,101 @@ header {
   background-color: #404bbf;
 }
 
-/* Section 2 - Features */
-
 .section-features-header {
   color: #fff;
 }
 
 .feature-title {
-  font-size: 20px;
-  /* font-style: normal; */
+  font-size: 20px; 
   font-weight: 500;
-  line-height: 120%; /* 24px; */
+  line-height: 120%; 
   letter-spacing: 0.4px;
 }
 
 .feature-text {
   font-size: 16px;
-  /* font-style: normal; */
   font-weight: 400;
-  line-height: 120%; /*24 px*/
+  line-height: 120%; 
   letter-spacing: 0.32px;
   color: #434455;
 }
 
-/* Section 3 - Team */
 .section-team {
   background: #f4f4fd;
 }
+
 .section-team-header {
-  font-size: 36px;
-  /* font-style: normal; */
+  font-size: 36px; 
   font-weight: 700;
-  line-height: 120%; /* 40px; */
+  line-height: 120%; 
   letter-spacing: 0.72px;
   text-transform: capitalize;
 }
+
 .team-card-name {
-  font-size: 20px;
-  /* font-style: normal; */
+  font-size: 20px; 
   font-weight: 500;
-  line-height: 120%; /*24px;*/
+  line-height: 120%; 
   letter-spacing: 0.4px;
 }
+
 .team-card-position {
-  font-size: 16px;
-  /* font-style: normal; */
+  font-size: 16px; 
   font-weight: 400;
-  line-height: 120%; /*24px;*/
+  line-height: 120%; 
   letter-spacing: 0.32px;
 }
 
-/* Section Portfolio */
 .section-portfolio {
   background-color: #fff;
 }
+
 .section-portfolio-header {
-  font-size: 36px;
-  /* font-style: normal; */
+  font-size: 36px; 
   font-weight: 700;
-  line-height: 111.111%; /*40px;*/
+  line-height: 111.111%; 
   letter-spacing: 0.72px;
   text-transform: capitalize;
 }
+
 .portfolio-item-name {
-  font-size: 20px;
-  /* font-style: normal; */
+  font-size: 20px;  
   font-weight: 500;
-  line-height: 120%; /*24px;*/
+  line-height: 120%; 
   letter-spacing: 0.4px;
 }
+
 .portfolio-item-type {
   color: #434455;
-  font-size: 16px;
-  /* font-style: normal; */
+  font-size: 16px; 
   font-weight: 400;
-  line-height: 120%; /*24px;*/
+  line-height: 120%; 
   letter-spacing: 0.32px;
 }
 
-/* Footer */
 footer {
   background: #2e2f42;
   color: #f4f4fd;
 }
+
 .footer-logo {
   font-family: Raleway;
-  font-size: 18px;
-  /* font-style: normal; */
+  font-size: 18px;  
   font-weight: 700;
-  line-height: 116.667%; /*21px;*/
+  line-height: 116.667%;
   letter-spacing: 0.54px;
   text-transform: uppercase;
   color: #f4f4fd;
 }
+
 .footer-logo-accent {
   font-family: Raleway;
   color: #4d5ae5;
 }
+
 .footer-logo-text {
-  font-size: 16px;
-  /* font-style: normal; */
+  font-size: 16px;  
   font-weight: 400;
-  line-height: 120%; /*24px;*/
+  line-height: 120%; 
   letter-spacing: 0.32px;
 }
