--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', sans-serif;
-  color: #2e2f42;
+  color: #434455;
   background-color: #ffffff;
 }
 
@@ -27,7 +27,7 @@ ul {
   overflow: hidden;
 }
 
-header {
+.header-page {
   background-color: #ffffff;
 }
 
@@ -52,15 +52,22 @@ header {
   letter-spacing: 0.02em;
 }
 
+.menu-item-link {
+  color: #2e2f42;
+}
+
 .menu-item-link:hover,
 .menu-item-link:focus {
   color: #404bbf;
   text-decoration-line: underline;
 }
 
+.header-address {
+  font-style: normal;
+}
+
 .contacts {
   font-size: 16px;
-  font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
@@ -85,22 +92,18 @@ header {
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: #fff;
-  /* text-align: center; */
+  text-align: center;
 }
 
 .button-order {
   cursor: pointer;
-  border-radius: 4px;
   background: #4d5ae5;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  padding: 16px 32px;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
-  gap: 10px;
 }
 
 .button-order:hover,
@@ -131,11 +134,16 @@ header {
   background: #f4f4fd;
 }
 
+.team-card {
+  background-color: #ffffff;
+}
+
 .section-team-header {
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
+  text-align: center;
   text-transform: capitalize;
 }
 
@@ -144,7 +152,7 @@ header {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  /* text-align: center; */
+  text-align: center;
 }
 
 .team-card-position {
@@ -152,7 +160,7 @@ header {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  /* text-align: center; */
+  text-align: center;
   color: #434455;
 }
 
@@ -165,6 +173,7 @@ header {
   font-weight: 700;
   line-height: 1.11;
   letter-spacing: 0.02em;
+  text-align: center;
   text-transform: capitalize;
 }
 
@@ -182,9 +191,8 @@ header {
   letter-spacing: 0.02em;
 }
 
-footer {
-  background: #2e2f42;
-  color: #f4f4fd;
+.footer-page {
+  background-color: #2e2f42;
 }
 
 .footer-logo {
