--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,11 @@ a {
   text-decoration: none;
 }
 
-ul {
+/* ul {
   list-style-type: none;
   margin: 0;
   padding-left: 0;
-}
+} */
 
 /* .visually-hidden {
   position: absolute;
