edit contact link classes

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,16 +69,15 @@ ul {
 .contacts {
 }
 
-.contact-email-link,
-.contact-phone-link {
+.contact-link {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
 
-.contact-email-link:hover,
-.contact-email-link:focus {
+.contact-link:hover,
+.contact-link:focus {
   color: #404bbf;
 }
 
