--- a/css/styles.css
+++ b/css/styles.css
@@ -45,9 +45,6 @@ ul {
   color: #2e2f42;
 }
 
-.menu {
-}
-
 .menu-item-link {
   font-size: 16px;
   font-weight: 500;
@@ -64,9 +61,6 @@ ul {
 
 .header-address {
   font-style: normal;
-}
-
-.contacts {
 }
 
 .contact-link {
@@ -96,7 +90,7 @@ ul {
 
 .button-service {
   cursor: pointer;
-  background: #4d5ae5;
+  background-color: #4d5ae5;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
